--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "gridsome": "^0.7.0",
     "vuex": "^3.5.1"
   },
