--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "gridsome": "^0.7.0",
+    "vue-toast-notification": "^0.5.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
